--- a/stochastic_sierpinski.html
+++ b/stochastic_sierpinski.html
@@ -334,15 +334,21 @@ td.blank {
   width: 3.5em;
 }
 
+#all_points_table {
+  float: right;
+}
+
 #point_pos_table input[type="color"] {
   width: 3em;
 }
 
-#point_pos_table input[type="number"] {
+#point_pos_table input[type="number"],
+#all_points_table input[type="number"] {
   width: 4em;
 }
 
-#point_pos_table input[type="range"] {
+#point_pos_table input[type="range"],
+#all_points_table input[type="range"] {
   width: 8em;
 }
 
@@ -407,22 +413,32 @@ td.blank {
       </div>
 
       <div class="info panel">
+        <table id="all_points_table">
+          <tr>
+            <th colspan=2>
+              All points move %
+              <button id="set_all_points">Set</button>
+            </th>
+          </tr>
+          <tr>
+            <td>
+              <input type="number" id="all_points_move_perc_option" value=50>
+            </td>
+            <td>
+              <input type="range" id="all_points_move_perc_range"
+                     min="0" max="100" step="5" value="50">
+            </td>
+          </tr>
+        </table>
         <table id="misc_info_table">
           <tr>
-            <th>Current Location</th>
+            <th>Current X,Y</th>
             <td id="point_cur_x"></td>
             <td id="point_cur_y"></td>
           </tr>
           <tr>
             <th>Total Steps</th>
             <td id="total_steps" colspan=2></td>
-          </tr>
-          <tr>
-            <th>Steps / Frame</th>
-            <td colspan=2>
-              <input type="number" id="steps_per_frame"
-                     min="0" max="500" step="10">
-            </td>
           </tr>
         </table>
         <table id="point_pos_table">
@@ -502,12 +518,19 @@ td.blank {
         <div class="optionsbox buttonbox">
           <table>
             <tr>
+              <th>Steps / Frame</th>
+              <td colspan=2>
+                <input type="number" id="steps_per_frame"
+                       min="0" max="500" step="10">
+              </td>
+            </tr>
+            <tr>
               <th>Canvas Size</th>
               <td>
                 <input id="canvas_width" type="number" value="420"
                        min="64" max="4096" step="1">
                 &nbsp;x&nbsp;
-                <input id="canvas_height" type="number" value="320"
+                <input id="canvas_height" type="number" value="420"
                        min="64" max="4096" step="1">
               </td>
             </tr>
@@ -803,6 +826,8 @@ td.blank {
     function UIPoint() {
       var args, hue;
       hue = arguments[0], args = 2 <= arguments.length ? slice.call(arguments, 1) : [];
+      this.on_move_per_range_input = bind(this.on_move_per_range_input, this);
+      this.on_move_perc_option_change = bind(this.on_move_perc_option_change, this);
       this.set_color_hue(hue);
       UIPoint.__super__.constructor.apply(this, args);
     }
@@ -835,6 +860,39 @@ td.blank {
       ctx = APP.graph_ui_ctx;
       ctx.strokeStyle = this.color;
       return ctx.strokeRect(this.x - 2, this.y - 2, 5, 5);
+    };
+
+    UIPoint.prototype.move_perc_range_el_init = function() {
+      this.move_perc_range_el.min = 0;
+      this.move_perc_range_el.max = 100;
+      this.move_perc_range_el.step = 5;
+      this.move_perc_range_el.value = this.move_perc * 100;
+      return this.move_perc_range_el.addEventListener('input', this.on_move_per_range_input);
+    };
+
+    UIPoint.prototype.on_move_perc_option_change = function(value) {
+      this.set_move_perc(value);
+      return APP.resumable_reset();
+    };
+
+    UIPoint.prototype.on_move_per_range_input = function(event) {
+      this.set_move_perc(event.target.value);
+      return APP.resumable_reset();
+    };
+
+    UIPoint.prototype.set_move_perc_range = function(newvalue) {
+      var rounded, step;
+      if (this.move_perc_range_el != null) {
+        step = this.move_perc_range_el.step;
+        rounded = Math.round(newvalue / step) * step;
+        return this.move_perc_range_el.value = rounded;
+      }
+    };
+
+    UIPoint.prototype.set_move_perc = function(newvalue) {
+      this.move_perc = newvalue / 100.0;
+      this.option.move_perc.set(this.move_perc * 100);
+      return this.set_move_perc_range(this.option.move_perc.get());
     };
 
     return UIPoint;
@@ -893,8 +951,6 @@ td.blank {
     function PointWidget() {
       var args;
       args = 1 <= arguments.length ? slice.call(arguments, 0) : [];
-      this.on_move_per_range_input = bind(this.on_move_per_range_input, this);
-      this.on_move_perc_option_change = bind(this.on_move_perc_option_change, this);
       this.on_color_change = bind(this.on_color_change, this);
       PointWidget.__super__.constructor.apply(this, args);
       APP.attach_point(this);
@@ -925,11 +981,7 @@ td.blank {
         })
       };
       this.move_perc_range_el = APP.create_input_element('range');
-      this.move_perc_range_el.min = 0;
-      this.move_perc_range_el.max = 100;
-      this.move_perc_range_el.step = 5;
-      this.move_perc_range_el.value = this.move_perc * 100;
-      this.move_perc_range_el.addEventListener('input', this.on_move_per_range_input);
+      this.move_perc_range_el_init();
       move_perc_adj_cell = this.row.insertCell(5);
       return move_perc_adj_cell.appendChild(this.move_perc_range_el);
     };
@@ -954,31 +1006,6 @@ td.blank {
     PointWidget.prototype.on_color_change = function(event) {
       this.set_color(event.target.value);
       return APP.resumable_reset();
-    };
-
-    PointWidget.prototype.on_move_perc_option_change = function(value) {
-      this.set_move_perc(value);
-      return APP.resumable_reset();
-    };
-
-    PointWidget.prototype.on_move_per_range_input = function(event) {
-      this.set_move_perc(event.target.value);
-      return APP.resumable_reset();
-    };
-
-    PointWidget.prototype.set_move_perc_range = function(newvalue) {
-      var rounded, step;
-      if (this.move_perc_range_el != null) {
-        step = this.move_perc_range_el.step;
-        rounded = Math.round(newvalue / step) * step;
-        return this.move_perc_range_el.value = rounded;
-      }
-    };
-
-    PointWidget.prototype.set_move_perc = function(newvalue) {
-      this.move_perc = newvalue / 100.0;
-      this.option.move_perc.set(this.move_perc * 100);
-      return this.set_move_perc_range(this.option.move_perc.get());
     };
 
     PointWidget.prototype.highlight = function() {
@@ -1073,6 +1100,7 @@ td.blank {
     };
 
     function DrawPoint(name, draw_style) {
+      this.on_set_all_points = bind(this.on_set_all_points, this);
       DrawPoint.__super__.constructor.call(this, '0', name);
       this.restrictions = new TargetRestriction(APP.context);
       this.set_color('#000000');
@@ -1081,7 +1109,19 @@ td.blank {
 
     DrawPoint.prototype.build = function() {
       this.info_x_cell = APP.context.getElementById(this.info_x_id);
-      return this.info_y_cell = APP.context.getElementById(this.info_y_id);
+      this.info_y_cell = APP.context.getElementById(this.info_y_id);
+      this.btn_set_all_points = APP.context.getElementById('set_all_points');
+      this.move_perc_range_el = APP.context.getElementById('all_points_move_perc_range');
+      this.move_perc_range_el_init();
+      this.option = {
+        move_perc: new NumberUIOption('all_points_move_perc_option', this.move_perc * 100, this.on_move_perc_option_change)
+      };
+      return this.btn_set_all_points.addEventListener('click', this.on_set_all_points);
+    };
+
+    DrawPoint.prototype.on_set_all_points = function(event) {
+      APP.set_all_points_move_perc(this.move_perc * 100);
+      return APP.resumable_reset();
     };
 
     DrawPoint.prototype.reset_color_cache = function() {
@@ -1904,6 +1944,17 @@ td.blank {
       return this.set_ngon(event.target.value);
     };
 
+    StochasticSierpinski.prototype.set_all_points_move_perc = function(value) {
+      var j, len1, p, ref, results;
+      ref = this.points;
+      results = [];
+      for (j = 0, len1 = ref.length; j < len1; j++) {
+        p = ref[j];
+        results.push(p.set_move_perc(value));
+      }
+      return results;
+    };
+
     StochasticSierpinski.prototype.on_steps_per_frame_input = function(event) {
       return this.set_steps_per_frame(event.target.value);
     };
@@ -1974,7 +2025,8 @@ td.blank {
           canvas_width: this.option.canvas_width.value,
           canvas_height: this.option.canvas_height.value,
           draw_style: this.option.draw_style.value,
-          draw_opacity: this.option.draw_opacity.value
+          draw_opacity: this.option.draw_opacity.value,
+          all_points_move_perc: this.cur.option.move_perc.get()
         }
       };
       return JSON.stringify(opt);
@@ -1992,6 +2044,9 @@ td.blank {
         }
         if (opt.options.draw_opacity != null) {
           this.option.draw_opacity.set(opt.options.draw_opacity);
+        }
+        if (opt.options.all_points_move_perc != null) {
+          this.cur.set_move_perc(opt.options.all_points_move_perc);
         }
       }
       if (opt.points != null) {
